applications/openeuler-mirrorlist-server/mirrorlist-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mirror-list-ingress
  namespace: openeuler-mirrorlist-server
spec:
  rules:
  - host: mirrors.openeuler.org
    http:
      paths:
      - backend:
          serviceName: mirror-list-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - mirrors.openeuler.org
    secretName: openeuler-org-tls
